--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-ecommerce",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
