--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@heroicons/react": "^2.0.18",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.1.2",
+    "@stripe/stripe-js": "^2.1.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.4",
     "@testing-library/jest-dom": "^5.17.0",
